Rearranged style. Fixed minor errors (basically lacks of headers in output files) Added Warmup interface, to allow different filters for the warm-up information.